--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.76.1",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.1.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-before-after-slider-component": "^1.1.8",
@@ -18,9 +21,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@yandex/ymaps3-types": "^1.0.16530300",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
