--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.76.1",
-    "graphql": "^16.11.0",
-    "graphql-request": "^7.1.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-before-after-slider-component": "^1.1.8",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.22.3",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
